; ModuleID = '/home/carl/AnghaBench/postgres/contrib/bloom/extr_blutils.c_BloomInitMetapage.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/bloom/extr_blutils.c_BloomInitMetapage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BLOOM_METAPAGE_BLKNO = common dso_local global i64 0, align 8
@GENERIC_XLOG_FULL_IMAGE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BloomInitMetapage(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @BloomNewBuffer(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @BufferGetBlockNumber(i32 %8)
  %10 = load i64, i64* @BLOOM_METAPAGE_BLKNO, align 8
  %11 = icmp eq i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @Assert(i32 %12)
  %14 = load i32, i32* %2, align 4
  %15 = call i32* @GenericXLogStart(i32 %14)
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @GENERIC_XLOG_FULL_IMAGE, align 4
  %19 = call i32 @GenericXLogRegisterBuffer(i32* %16, i32 %17, i32 %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @BloomFillMetapage(i32 %20, i32 %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @GenericXLogFinish(i32* %23)
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @UnlockReleaseBuffer(i32 %25)
  ret void
}

declare dso_local i32 @BloomNewBuffer(i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i64 @BufferGetBlockNumber(i32) #1

declare dso_local i32* @GenericXLogStart(i32) #1

declare dso_local i32 @GenericXLogRegisterBuffer(i32*, i32, i32) #1

declare dso_local i32 @BloomFillMetapage(i32, i32) #1

declare dso_local i32 @GenericXLogFinish(i32*) #1

declare dso_local i32 @UnlockReleaseBuffer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
